feat(notes): refactor